--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: table;
 }
 h1, h2 {
-  color: #b71c1c;
+  color: #1d7e9e;
   text-shadow:0 1px 1px #fff;
 }
 h1 {
@@ -41,7 +41,7 @@ h2 {
       center center,
       960,
       from(rgba(255, 255, 255, 0)),
-      to(#e57373)
+      to(#64b5f6)
     );
   background-image: radial-gradient(rgba(255, 255, 255, 0), #e57373);
 }
