--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h2 {
       center center,
       960,
       from(rgba(255, 255, 255, 0)),
-      to(#64b5f6)
+      to(#e57373)
     );
   background-image: radial-gradient(rgba(255, 255, 255, 0), #e57373);
 }
